# contracts/openapi/api.v1.yaml
@@ -17,6 +17,13 @@ components:
           type:
             - integer
             - string
+        maxPerOrder:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - "null"
+            - integer
+            - string
         name:
           type: string
         priceAmount:
@@ -32,6 +39,7 @@ components:
         - priceAmount
         - priceCurrency
         - capacity
+        - maxPerOrder
       type: object
     AddTicketTypeResponse:
       properties:
@@ -44,6 +52,13 @@ components:
         createdAt:
           format: date-time
           type: string
+        maxPerOrder:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - "null"
+            - integer
+            - string
         name:
           type: string
         priceAmount:
@@ -78,86 +93,10 @@ components:
         - priceAmount
         - priceCurrency
         - capacity
+        - maxPerOrder
         - sold
         - reserved
         - createdAt
-      type: object
-    EditTicketTypeRequest:
-      properties:
-        capacity:
-          format: int32
-          pattern: ^-?(?:0|[1-9]\d*)$
-          type:
-            - integer
-            - string
-        name:
-          type: string
-        priceAmount:
-          format: double
-          pattern: ^-?(?:0|[1-9]\d*)(?:\.\d+)?$
-          type:
-            - number
-            - string
-        priceCurrency:
-          type: string
-      required:
-        - name
-        - priceAmount
-        - priceCurrency
-        - capacity
-      type: object
-    EditTicketTypeResponse:
-      properties:
-        capacity:
-          format: int32
-          pattern: ^-?(?:0|[1-9]\d*)$
-          type:
-            - integer
-            - string
-        createdAt:
-          format: date-time
-          type: string
-        name:
-          type: string
-        priceAmount:
-          format: double
-          pattern: ^-?(?:0|[1-9]\d*)(?:\.\d+)?$
-          type:
-            - number
-            - string
-        priceCurrency:
-          type: string
-        reserved:
-          format: int32
-          pattern: ^-?(?:0|[1-9]\d*)$
-          type:
-            - integer
-            - string
-        sold:
-          format: int32
-          pattern: ^-?(?:0|[1-9]\d*)$
-          type:
-            - integer
-            - string
-        ticketTypeId:
-          format: int32
-          pattern: ^-?(?:0|[1-9]\d*)$
-          type:
-            - integer
-            - string
-        updatedAt:
-          format: date-time
-          type: string
-      required:
-        - ticketTypeId
-        - name
-        - priceAmount
-        - priceCurrency
-        - capacity
-        - sold
-        - reserved
-        - createdAt
-        - updatedAt
       type: object
     AssignRoleRequest:
       properties:
@@ -345,6 +284,99 @@ components:
         - physicalAddress
         - isOnline
         - description
+      type: object
+    EditTicketTypeRequest:
+      properties:
+        capacity:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - integer
+            - string
+        maxPerOrder:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - "null"
+            - integer
+            - string
+        name:
+          type: string
+        priceAmount:
+          format: double
+          pattern: ^-?(?:0|[1-9]\d*)(?:\.\d+)?$
+          type:
+            - number
+            - string
+        priceCurrency:
+          type: string
+      required:
+        - name
+        - priceAmount
+        - priceCurrency
+        - capacity
+        - maxPerOrder
+      type: object
+    EditTicketTypeResponse:
+      properties:
+        capacity:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - integer
+            - string
+        createdAt:
+          format: date-time
+          type: string
+        maxPerOrder:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - "null"
+            - integer
+            - string
+        name:
+          type: string
+        priceAmount:
+          format: double
+          pattern: ^-?(?:0|[1-9]\d*)(?:\.\d+)?$
+          type:
+            - number
+            - string
+        priceCurrency:
+          type: string
+        reserved:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - integer
+            - string
+        sold:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - integer
+            - string
+        ticketTypeId:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - integer
+            - string
+        updatedAt:
+          format: date-time
+          type: string
+      required:
+        - ticketTypeId
+        - name
+        - priceAmount
+        - priceCurrency
+        - capacity
+        - maxPerOrder
+        - sold
+        - reserved
+        - createdAt
+        - updatedAt
       type: object
     EventDetailsResponse:
       properties:
@@ -789,6 +821,13 @@ components:
             - string
         isSoldOut:
           type: boolean
+        maxPerOrder:
+          format: int32
+          pattern: ^-?(?:0|[1-9]\d*)$
+          type:
+            - "null"
+            - integer
+            - string
         name:
           type: string
         priceAmount:
@@ -823,6 +862,7 @@ components:
         - priceAmount
         - priceCurrency
         - capacity
+        - maxPerOrder
         - sold
         - reserved
         - available
@@ -2319,6 +2359,62 @@ paths:
       tags:
         - TicketTypes
   /api/events/{eventId}/ticket-types/{ticketTypeId}:
+    delete:
+      operationId: RemoveTicketType
+      parameters:
+        - in: path
+          name: eventId
+          required: true
+          schema:
+            format: int32
+            pattern: ^-?(?:0|[1-9]\d*)$
+            type:
+              - integer
+              - string
+        - in: path
+          name: ticketTypeId
+          required: true
+          schema:
+            format: int32
+            pattern: ^-?(?:0|[1-9]\d*)$
+            type:
+              - integer
+              - string
+      responses:
+        "204":
+          description: No Content
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+          description: Unauthorized
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+          description: Forbidden
+        "404":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+          description: Not Found
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+          description: Internal Server Error
+      tags:
+        - TicketTypes
     put:
       operationId: EditTicketType
       parameters:
@@ -2353,62 +2449,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/EditTicketTypeResponse"
           description: OK
-        "401":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ProblemDetails"
-          description: Unauthorized
-        "403":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ProblemDetails"
-          description: Forbidden
-        "404":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ProblemDetails"
-          description: Not Found
-        "422":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ProblemDetails"
-          description: Unprocessable Entity
-        "500":
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ProblemDetails"
-          description: Internal Server Error
-      tags:
-        - TicketTypes
-    delete:
-      operationId: RemoveTicketType
-      parameters:
-        - in: path
-          name: eventId
-          required: true
-          schema:
-            format: int32
-            pattern: ^-?(?:0|[1-9]\d*)$
-            type:
-              - integer
-              - string
-        - in: path
-          name: ticketTypeId
-          required: true
-          schema:
-            format: int32
-            pattern: ^-?(?:0|[1-9]\d*)$
-            type:
-              - integer
-              - string
-      responses:
-        "204":
-          description: No Content
         "401":
           content:
             application/problem+json:
